fix(wire): restore trailer metadata collection; replace Collections.emptyMap() with Map.of() where safe
WireStreamResponseHandler: restore the trailerMetadata field and
collection logic that was accidentally dropped during the async
refactoring. Non-reserved trailer headers are now again set as
response attachments on the success path.

Replace Collections.emptyMap() with Map.of() in 5 locations where
the empty map is never serialized (ExtensionLoader, DefaultResponseFuture,
WireCallContext, WireMetadata, WireStreamServerHandler). Keep
Collections.emptyMap() in DefaultRequest and DefaultResponse because
both implement Serializable and attachments may travel over the wire.